--- a/examples/index.html
+++ b/examples/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="./global.css">
+    <meta charset="utf-8">
+    <title>ts-axios examples</title>
+    <link rel="stylesheet" href="/global.css">
 </head>
 
-<body style="padding: 0 20px;">
-    <h1>ts-axios example</h1>
+<body style="padding: 0 20px">
+    <h1>ts-axios examples</h1>
     <ul>
-        <li><a href="simple">simple</a></li>
+        <li><a href="simple">Simple</a></li>
+        <li><a href="base">base</a></li>
     </ul>
 </body>
 
