--- a/examples/simple/index.html
+++ b/examples/simple/index.html
@@ -2,10 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>simple example</title>
+    <meta charset="utf-8">
+    <title>Simple example</title>
 </head>
 
 <body>
